--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     href="javascript:void(0)"><img width="32px" src="assets/logo.webp"><span class="nav-Logo-Text">MINT
                         VENTURES</span></a>
                 <div class="rounded-tab d-flex justify-content-center gap-3 px-5 py-2 ms-5">
-                    <img width="56px" src="https://www.mintventures.xyz/in.svg" alt="LinkedIn">
-                    <img width="56px" src="https://www.mintventures.xyz/x.svg" alt="X">
-                    <img width="56px" src="https://www.mintventures.xyz/tg.svg" alt="Telegram">
+                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/in.svg" alt="LinkedIn"></a>
+                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/x.svg" alt="X"></a>
+                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/tg.svg" alt="Telegram"></a>
                 </div>
                 <div class="d-flex align-items-center gap-3">
                     <a class="btn custom-boader2" href="javascript:void(0)">What we provide</a>
@@ -155,6 +155,7 @@
                         <p class="card-text">We provide startups with seamless access to key global markets—Europe (EU), United States (US), and Asia-Pacific (APAC)—to unlock growth opportunities and build scalable, regionally adapted solutions.</p>
                     </div>
                 </div>
+
                 <div class="card custom-Card col-12 col-sm-6 rounded-0 p-3">
                     <img src="https://www.mintventures.xyz/img02.svg" class="card-img-top">
                     <div class="card-body pt-4 pb-4">
@@ -185,6 +186,7 @@
 
     </main>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
@@ -192,4 +194,9 @@
     integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
     crossorigin="anonymous"></script>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+    <script src="./app.js"></script>
 </html>
