added  look Section, industries Section and footer Section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!---------- navbar ---------->
-    <nav class="navbar navbar-expand-lg m-0 p-0">
+    <nav class="navbar navbar-expand-lg w-100 m-0 p-0">
         <div class="container-fluid navContainer px-2">
             <a class="navbar-brand d-md-none d-lg-none" href="javascript:void(0)"><img width="32px"
                     src="assets/logo.webp"></a>
@@ -43,9 +43,11 @@
                     href="javascript:void(0)"><img width="32px" src="assets/logo.webp"><span class="nav-Logo-Text">MINT
                         VENTURES</span></a>
                 <div class="rounded-tab d-flex justify-content-center gap-3 px-5 py-2 ms-5">
-                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/in.svg" alt="LinkedIn"></a>
+                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/in.svg"
+                            alt="LinkedIn"></a>
                     <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/x.svg" alt="X"></a>
-                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/tg.svg" alt="Telegram"></a>
+                    <a href="javascript:void(0)"><img width="56px" src="https://www.mintventures.xyz/tg.svg"
+                            alt="Telegram"></a>
                 </div>
                 <div class="d-flex align-items-center gap-3">
                     <a class="btn custom-boader2" href="javascript:void(0)">What we provide</a>
@@ -115,21 +117,22 @@
         <div class="founder-Section w-100 row d-flex flex-wrap gap-5 gap-md-0 gap-lg-0 mt-5">
             <div class="col-md-6 col-lg-6 d-flex flex-column gap-3 ps-5">
                 <span
-                    class="numbers-Tag d-flex align-items-center gap-1 border-2 border-bottom border-secondary-subtle border-opacity-25 me-auto pb-1">
+                    class="d-flex align-items-center gap-1 border-2 border-bottom border-secondary-subtle border-opacity-25 me-auto pb-1">
                     <div class="bg-secondary opacity-75" style="width: 8px; height: 8px; background: #000;"></div>
                     001
                 </span>
                 <h2 class="custom-heading-2">The founder's journey<br /><span class="custom-heading-2">starts
                         here.</span></h2>
                 <hr class="border-2 opacity-50" />
-                <p class="fs-4 lh-sm mt-2 mb-4">There’s a $50T market opportunity waiting to be taken as traditional
+                <p class="fs-6 lh-base mt-2 mb-4">There’s a $50T market opportunity waiting to be taken as traditional
                     business models are disrupted by AI and Web3. We bring bleeding-edge innovation to industries still
                     rooted in analog practices. If you’re a founder ready to tackle underserved, traditional markets
                     with bold, vertical solutions, we are here to help you make the first move.</p>
-                <button class="btn custom-boader2 rounded-0 me-auto px-5 py-3">Work with us →</button>
+                <button class="btn custom-boader2 rounded-0 text-nowrap me-1  me-md-auto me-lg-auto px-5 py-3">Work with
+                    us →</button>
             </div>
 
-            <div class="col-md-6 col-lg-6 overflow-hidden d-flex justify-content-center align-items-center">
+            <div class="col-md-6 col-lg-6 overflow-hidden d-flex justify-content-center align-items-center mt-sm-5">
                 <img class="spinning-Image" src="assets/img01.webp" alt="">
             </div>
         </div>
@@ -139,52 +142,200 @@
 
 
         <!------------ Provide Section ------------>
-        <div class="w-100 mt-4">
+        <div class="w-100 mt-4 d-flex flex-column gap-3 mt-5 px-3 px-md-5 px-lg-5">
             <span
-                class="numbers-Tag d-flex align-items-center gap-1 border-2 border-bottom border-secondary-subtle border-opacity-25 pb-1">
+                class="d-flex align-items-center gap-1 border-2 border-bottom border-secondary-subtle border-opacity-25 me-auto pb-1">
                 <div class="bg-secondary opacity-75" style="width: 8px; height: 8px; background: #000;"></div>
                 002
             </span>
-            <h2>What we provide</h2>
+            <h2 class="custom-heading-2 mb-4">What we provide</h2>
+
             <!-- Card's div -->
-            <div class="row w-100 d-flex justify-content-md-between justify-content-lg-between gap-3 gap-sm-4 gap-md-4 gap-lg-0 px-4 px-md-5 px-lg-5 m-0">
-                <div class="card custom-Card col-12 col-sm-6 rounded-0 p-3">
+            <div
+                class="custom-cards-grid row w-100 d-flex justify-content-md-between justify-content-lg-between gap-3 gap-sm-4 gap-md-4 gap-lg-0 m-0 p-0">
+
+                <div class="card custom-Card col-12 col-sm-6 rounded-0 mb-4 p-3">
                     <img src="https://www.mintventures.xyz/img02.svg" class="card-img-top">
-                    <div class="card-body pt-4 pb-4">
-                        <h5 class="card-title">Access to markets: (EU, US, APAC)</h5>
-                        <p class="card-text">We provide startups with seamless access to key global markets—Europe (EU), United States (US), and Asia-Pacific (APAC)—to unlock growth opportunities and build scalable, regionally adapted solutions.</p>
+                    <div class="card-body custom-cards-body pt-4 pb-4">
+                        <h5 class="card-title fs-3">Access to markets:<br />(EU, US, APAC)</h5>
+                        <p class="card-text lh-sm">We provide startups with seamless access to key global markets—Europe
+                            (EU), United States (US), and Asia-Pacific (APAC)—to unlock growth opportunities and build
+                            scalable, regionally adapted solutions.</p>
                     </div>
                 </div>
 
-                <div class="card custom-Card col-12 col-sm-6 rounded-0 p-3">
-                    <img src="https://www.mintventures.xyz/img02.svg" class="card-img-top">
-                    <div class="card-body pt-4 pb-4">
-                        <h5 class="card-title">Access to markets: (EU, US, APAC)</h5>
-                        <p class="card-text">We provide startups with seamless access to key global markets—Europe (EU), United States (US), and Asia-Pacific (APAC)—to unlock growth opportunities and build scalable, regionally adapted solutions.</p>
+                <div class="card custom-Card col-12 col-sm-6 rounded-0 mb-4 p-3">
+                    <img src="https://www.mintventures.xyz/img03.svg" class="card-img-top">
+                    <div class="card-body custom-cards-body pt-4 pb-4">
+                        <h5 class="card-title fs-3">Funding Opportunities</h5>
+                        <p class="card-text lh-sm">We specialize in early-stage funding, providing the capital and
+                            resources startups need to bring their ideas to life and accelerate growth.</p>
                     </div>
                 </div>
-                <div class="card custom-Card col-12 col-sm-6 rounded-0 p-3">
-                    <img src="https://www.mintventures.xyz/img02.svg" class="card-img-top">
-                    <div class="card-body pt-4 pb-4">
-                        <h5 class="card-title">Access to markets: (EU, US, APAC)</h5>
-                        <p class="card-text">We provide startups with seamless access to key global markets—Europe (EU), United States (US), and Asia-Pacific (APAC)—to unlock growth opportunities and build scalable, regionally adapted solutions.</p>
+
+                <div class="card custom-Card col-12 col-sm-6 rounded-0 mb-4 p-3">
+                    <img src="https://www.mintventures.xyz/img04.svg" class="card-img-top">
+                    <div class="card-body custom-cards-body pt-4 pb-4">
+                        <h5 class="card-title fs-3">Product and Business Development</h5>
+                        <p class="card-text lh-sm">We support startups with comprehensive product and business
+                            development services, including MVP, Product Roadmaps, Partnerships, Legal and HR.</p>
                     </div>
                 </div>
-                <div class="card custom-Card col-12 col-sm-6 rounded-0 p-3">
-                    <img src="https://www.mintventures.xyz/img02.svg" class="card-img-top">
-                    <div class="card-body pt-4 pb-4">
-                        <h5 class="card-title">Access to markets: (EU, US, APAC)</h5>
-                        <p class="card-text">We provide startups with seamless access to key global markets—Europe (EU), United States (US), and Asia-Pacific (APAC)—to unlock growth opportunities and build scalable, regionally adapted solutions.</p>
+
+                <div class="card custom-Card col-12 col-sm-6 rounded-0 mb-4 p-3">
+                    <img src="https://www.mintventures.xyz/img05.svg" class="card-img-top">
+                    <div class="card-body custom-cards-body pt-4 pb-4">
+                        <h5 class="card-title fs-3">Marketing and Design</h5>
+                        <p class="card-text lh-sm">Every company needs a story that resonates with its audience, and we
+                            help craft that story through impactful marketing and comprehensive design.</p>
                     </div>
                 </div>
-             
-               
+
+            </div>
+        </div>
+
+
+
+
+
+        <!------------ Look Section ------------>
+        <div class="look-Section d-flex flex-column justify-content-center px-3 px-md-5 px-lg-5 py-5">
+            <span class="d-flex align-items-center gap-1 border-2 border-bottom border-secondary me-auto pb-1">
+                <div class="bg-secondary opacity-75" style="width: 8px; height: 8px; background: #000;"></div>
+                003
+            </span>
+            <div
+                class="d-flex flex-wrap justify-content-between align-items-center gap-4 gap-md-0 gap-lg-0 border-1 border-bottom border-secondary mt-2 pb-4">
+                <h2 class="custom-heading-2">What we look for</h2>
+                <button
+                    class="btn custom-boader2 rounded-0 border-1 border-secondary border-opacity-50 text-nowrap px-5 py-3">Work
+                    with
+                    us →</button>
+            </div>
+
+            <div
+                class="row d-flex justify-content-between align-items-center gap-3 border-1 border-bottom border-secondary py-4 my-3">
+                <h3 class="col-md-8 col-lg-8 custom-heading-3"><span>↳</span> Early-stage and pre-revenue companies</h3>
+                <p class="col-md-3 col-lg-3 m-0">Companies that got a "signal" from the market and initial traction.</p>
+            </div>
+
+            <div
+                class="row d-flex justify-content-between align-items-center gap-3 border-1 border-bottom border-secondary py-4 my-3">
+                <h3 class="col-md-8 col-lg-8 custom-heading-3"><span>↳</span> Domain knowledge experts</h3>
+                <p class="col-md-3 col-lg-3 m-0">You know something that many others don't quite yet comprehend.</p>
+            </div>
+
+            <div
+                class="row d-flex justify-content-between align-items-center gap-3 border-1 border-bottom border-secondary py-4 my-3">
+                <h3 class="col-md-8 col-lg-8 custom-heading-3"><span>↳</span> Verticalisation in the AI and Web3 Space
+                </h3>
+                <p class="col-md-3 col-lg-3 m-0">You believe that verticalisation is key to success of the company.</p>
+            </div>
+
+        </div>
+
+
+
+
+
+        <!------------ Industries Section ------------>
+        <div class="industries-Section w-100 row d-flex flex-wrap gap-5 gap-md-0 gap-lg-0 mt-5">
+            <div class="col-md-6 col-lg-6 d-flex flex-column justify-content-center gap-3 ps-5">
+                <span
+                    class="d-flex align-items-center gap-1 border-2 border-bottom border-secondary-subtle border-opacity-25 me-auto pb-1">
+                    <div class="bg-secondary opacity-75" style="width: 8px; height: 8px; background: #000;"></div>
+                    004
+                </span>
+                <h2 class="custom-heading-2">Industries</h2>
+                <p class="fs-6 lh-base mt-2 mb-4">We are industry-agnostic but firmly believe that the transformative
+                    potential of emerging technologies like AI and Web3 will have the greatest impact on certain
+                    industries.</p>
+                <button class="btn custom-boader2 rounded-0 text-nowrap me-1  me-md-auto me-lg-auto px-5 py-3">Get
+                    Onboard →</button>
+            </div>
+
+            <div class="col-md-6 col-lg-6 row d-flex text-center mx-auto">
+
+                <div class="col-md-6 col-lg-6">
+                    <img src="https://www.mintventures.xyz/img06.svg" alt="">
+                    <p class="fs-3 mt-3 mb-5">Real Estate</p>
+                </div>
+
+                <div class="col-md-6 col-lg-6">
+                    <img src="https://www.mintventures.xyz/img07.svg" alt="">
+                    <p class="fs-3 mt-3 mb-5">Construction</p>
+                </div>
+
+                <div class="col-md-6 col-lg-6">
+                    <img src="https://www.mintventures.xyz/img08.svg" alt="">
+                    <p class="fs-3 mt-3 mb-5">Manufacturing</p>
+                </div>
+
+                <div class="col-md-6 col-lg-6">
+                    <img src="https://www.mintventures.xyz/img09.svg" alt="">
+                    <p class="fs-3 mt-3 mb-5">Materials</p>
+                </div>
+
+                <div class="col-md-6 col-lg-6">
+                    <img src="https://www.mintventures.xyz/img10.svg" alt="">
+                    <p class="fs-3 mt-3 mb-5">Legal</p>
+                </div>
+
+                <div class="col-md-6 col-lg-6">
+                    <img src="https://www.mintventures.xyz/img11.svg" alt="">
+                    <p class="fs-3 mt-3 mb-5">Logistics</p>
+                </div>
 
             </div>
         </div>
 
 
     </main>
+
+
+
+
+
+    <!------------ Footer Section ------------>
+    <footer class="gap-4 p-5">
+        <img src="assets/logo.webp">
+
+        <div class="d-flex flex-column">
+            <div class="row d-flex flex-wrap gap-5 gap-md-0 gap-lg-0 my-5 my-md-0 my-lg-0">
+                <!-- Contacts -->
+                <div class="col-md-3 col-lg-3 d-flex flex-column gap-4">
+                    <h3 class="custom-heading-3 text-white">Contacts</h3>
+                    <a href="javascript:void(0)" class="btn d-flex text-white me-auto p-0"><img class="m-0 p-0"
+                            src="https://www.mintventures.xyz/email.svg">saadsalman708@gmail.com</a>
+                    <span class="text-white">Karachi, Sindh, Pakistan</span>
+                </div>
+
+                <!-- Find Us -->
+                <div class="col-md-3 col-lg-3 d-flex flex-column gap-4">
+                    <h3 class="custom-heading-3 text-white">Find Us</h3>
+                    <a href="javascript:void(0)" class="btn text-white me-auto p-0">Linkedin</a>
+                    <a href="javascript:void(0)" class="btn text-white me-auto p-0">Twitter</a>
+                </div>
+
+                <!-- sign up / subscribe -->
+                <div class="col-md-6 col-lg-6 d-flex flex-column gap-4">
+                    <h3 class="custom-heading-3 text-white">Sign up to get the latest news.</h3>
+                    <div class="d-flex flex-column flex-md-row flex-lg-row gap-4">
+                        <input type="email" placeholder="Your email" class="border-0 border-2 border-bottom border-white border-opacity-50 fs-5 text-white py-4">
+                        <button
+                            class="btn custom-boader2 rounded-0 border-2 border-white border-opacity-50 text-nowrap text-white opacity-75 fs-4 px-5 py-3">
+                        Subscribe
+                        </button>
+                    </div>
+                    <span class="text-end text-white ms-auto">Mint Ventures spearheads Web3 & AI innovation, empowering startups
+                        and enterprises with the tools to develop resilient business strategies, optimize processes with
+                        AI and launch successful MVPs.</span>
+                </div>
+            </div>
+
+            <span class="mx-auto mt-5 pe-md-5 pe-lg-5"><a href="javascript:void(0)" class="btn text-white mx-auto p-0">&copy; SaadSalman708</a></span>
+        </div>
+    </footer>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -195,8 +346,9 @@
     crossorigin="anonymous"></script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-    <script src="./app.js"></script>
+<script src="./app.js"></script>
+
 </html>
