added Signature Feature

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                         class="collapsed-button Bijli-Ka-Button btn d-md-none d-lg-none custom-boader2 border-1 border-secondary-subtle rounded-0 w-100 px-5 py-2 mx-auto">Get
                         Onboard</button>
                     <div class="d-flex gap-5 justify-content-center my-5 p-5">
-                        <img src="https://www.mintventures.xyz/in.svg" alt="LinkedIn">
-                        <img src="https://www.mintventures.xyz/x.svg" alt="X">
-                        <img src="https://www.mintventures.xyz/tg.svg" alt="Telegram">
+                        <a href="javascript:void(0)" class="Bijli-Ka-Button"><img src="https://www.mintventures.xyz/in.svg" alt="LinkedIn"></a>
+                        <a href="javascript:void(0)" class="Bijli-Ka-Button"><img src="https://www.mintventures.xyz/x.svg" alt="X"></a>
+                        <a href="javascript:void(0)" class="Bijli-Ka-Button"><img src="https://www.mintventures.xyz/tg.svg" alt="Telegram"></a>
                     </div>
                 </div>
             </div>
@@ -306,8 +306,7 @@
 
 
         <!------------ Help Section ------------>
-        <div
-            class="dn help-Section w-100 row d-flex flex-wrap gap-5 gap-md-0 gap-lg-0 mt-5 mx-0 py-md-4 py-lg-4 pe-md-4 pe-lg-4">
+        <div class="dn help-Section w-100 row d-flex flex-wrap gap-5 gap-md-0 gap-lg-0 mt-5 mx-0 py-md-4 py-lg-4 pe-md-4 pe-lg-4">
             <div class="col-md-6 col-lg-6 d-flex flex-column justify-content-center gap-3 ps-3 ps-md-5 ps-lg-5 py-4">
                 <span
                     class="d-flex align-items-center gap-1 border-2 border-bottom border-secondary-subtle border-opacity-25 me-auto pb-1">
@@ -449,16 +448,16 @@
                 <!-- Contacts -->
                 <div class="col-md-3 col-lg-3 d-flex flex-column gap-4">
                     <h3 class="custom-heading-3 text-white">Contacts</h3>
-                    <a href="javascript:void(0)" class="btn d-flex text-white me-auto p-0"><img class="m-0 p-0"
-                            src="https://www.mintventures.xyz/email.svg">saadsalman708@gmail.com</a>
+                    <a href="javascript:void(0)" class="Bijli-Ka-Button btn d-flex text-white me-auto p-0"><img style="width: 20px;" class="m-0 p-0"
+                            src="https://www.mintventures.xyz/email.svg">&nbsp;saadsalman708@gmail.com</a>
                     <span class="text-white">Karachi, Sindh, Pakistan</span>
                 </div>
 
                 <!-- Find Us -->
                 <div class="col-md-3 col-lg-3 d-flex flex-column gap-4">
                     <h3 class="custom-heading-3 text-white">Find Us</h3>
-                    <a href="javascript:void(0)" class="btn text-white me-auto p-0">Linkedin</a>
-                    <a href="javascript:void(0)" class="btn text-white me-auto p-0">Twitter</a>
+                    <a href="javascript:void(0)" class="Bijli-Ka-Button btn text-white me-auto p-0">Linkedin</a>
+                    <a href="javascript:void(0)" class="Bijli-Ka-Button btn text-white me-auto p-0">Twitter</a>
                 </div>
 
                 <!-- sign up / subscribe -->
@@ -468,7 +467,7 @@
                         <input type="email" placeholder="Your email"
                             class="border-0 border-2 border-bottom border-white border-opacity-50 fs-5 text-white py-4">
                         <button
-                            class="btn custom-boader2 rounded-0 border-2 border-white border-opacity-50 text-nowrap text-white opacity-75 fs-4 px-5 py-3">
+                            class="Bijli-Ka-Button btn custom-boader2 rounded-0 border-2 border-white border-opacity-50 text-nowrap text-white opacity-75 fs-4 px-5 py-3">
                             Subscribe
                         </button>
                     </div>
@@ -480,7 +479,7 @@
             </div>
 
             <span class="mx-auto mt-md-5 mt-lg-5 pe-md-5 pe-lg-5"><a href="javascript:void(0)"
-                    class="btn text-white mx-auto p-0">&copy; SaadSalman708</a></span>
+                    class="Bijli-Ka-Button btn text-white mx-auto p-0">&copy; SaadSalman708</a></span>
         </div>
     </footer>
 </body>
